kubernetes-mainfest/private_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: private-network
spec:
  podSelector:
    matchLabels:
      io.kompose.network/private_network: "true"
  policyType:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/private_network: "true"
